force-app/main/default/objects/TravellerInfo__c/fields/USACity__c.field-meta.xml
<CustomField>
    <fullName>USACity__c</fullName>
    <label>美國城市</label>
    <length>40</length>
    <type>Text</type>
</CustomField>