force-app/main/default/objects/TravellerInfo__c/fields/USAEmergencyContactName__c.field-meta.xml
<CustomField>
    <fullName>USAEmergencyContactName__c</fullName>
    <label>美國緊急聯絡人姓名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>