force-app/main/default/objects/TravellerInfo__c/fields/USAEmergencyContactNationality__c.field-meta.xml
<CustomField>
    <fullName>USAEmergencyContactNationality__c</fullName>
    <label>美國緊急聯絡人國籍</label>
    <length>50</length>
    <type>Text</type>
</CustomField>