force-app/main/default/objects/TravellerInfo__c/fields/USAEmergencyContactPhone__c.field-meta.xml
<CustomField>
    <fullName>USAEmergencyContactPhone__c</fullName>
    <label>美國緊急連絡人電話</label>
    <length>50</length>
    <type>Text</type>
</CustomField>