force-app/main/default/objects/TravellerInfo__c/fields/USAState__c.field-meta.xml
<CustomField>
    <fullName>USAState__c</fullName>
    <label>美國州別</label>
    <length>20</length>
    <type>Text</type>
</CustomField>