force-app/main/default/objects/TravellerInfo__c/fields/USAStreet__c.field-meta.xml
<CustomField>
    <fullName>USAStreet__c</fullName>
    <description>美國線專用</description>
    <label>美國街道</label>
    <length>100</length>
    <type>Text</type>
</CustomField>