force-app/main/default/objects/TravellerInfo__c/fields/USAZipCode__c.field-meta.xml
<CustomField>
    <fullName>USAZipCode__c</fullName>
    <label>美國郵遞區號</label>
    <length>10</length>
    <type>Text</type>
</CustomField>