force-app/main/default/objects/TravellerInfo__c/fields/VisaExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>VisaExpiryDate__c</fullName>
    <label>簽證到期日</label>
    <length>20</length>
    <type>Text</type>
</CustomField>