force-app/main/default/objects/TravellerInfo__c/fields/VisaIssuingCountry__c.field-meta.xml
<CustomField>
    <fullName>VisaIssuingCountry__c</fullName>
    <label>簽證適用國家</label>
    <length>20</length>
    <type>Text</type>
</CustomField>