force-app/main/default/objects/TravellerInfo__c/fields/VisaNumber__c.field-meta.xml
<CustomField>
    <fullName>VisaNumber__c</fullName>
    <label>簽證號碼</label>
    <length>50</length>
    <type>Text</type>
</CustomField>