force-app/main/default/objects/TravellerInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FlightNumber__c</columns>
    <columns>DepartureLocationGMTLocal__c</columns>
    <columns>IATA_MSO_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Channel__c</columns>
    <columns>PNR__c</columns>
    <columns>DepartureLocation__c</columns>
    <columns>Destination__c</columns>
    <columns>LastName__c</columns>
    <columns>firstName__c</columns>
    <columns>US_Bound__c</columns>
    <columns>Seat__c</columns>
    <columns>AircraftType__c</columns>
    <columns>SeatStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>